Date	Added

2007/03/22
	* Made packet_ver_flag's description use hexadecimal values for the packet
	  versions, and changed the default to 0xFFFF. [Skotlex]
2007/03/19
	* Removed the 'charsave_method' setting from inter_athena.conf
2007/03/17
	* Cleaned up the login & char config [ultramage]
	- removed check_ip_flag
	- changed date_format to input the format string directly
	- changed many settings to allow yes/no instead of just 1/0
	* Removed .gat from configs [Lupus]
2007/03/14
	* Changed the default of debuff_on_logout to 1 since food items shouldn't
	  dispell on logout. [Skotlex]
2007/03/08
	* Adjustments for the new mapcache [DracoRPG]
	- Removed ".gat" from map names in maps_athena.conf
	- Removed read_map_from_cache option as there's no more choice to do
	- Removed afm_dir option as there's no more need for AFM/AF2 support
2007/03/06
	* Added the two new packet versions to battle/client.conf [Zephiris]
2007/03/05
	* Removed mode_neg and frame_size from packet_athena.conf [ultramage]
2007/02/16
	* Collapsed config settings "sg_miracle_skill_min_duration" and
	  "sg_miracle_skill_max_duration" into "sg_miracle_skill_duration", which
	  defaults to an hour (skill.conf).
2007/02/12
	* Corrected the meaning of "skill_display_fail&2", made 2 the default
	  setting. [Skotlex]
2007/02/08
	* Since the mysql ping interval is now autoconfigured, removed
	the connection_ping_interval config setting in inter_athena.conf
2007/02/01
	* Improved a bit the description of the mvp item get time config settings.
2007/01/29
	* Collapsed config settings produce_item_name_input,
	  produce_potion_name_input, making_arrow_name_input, holywater_name_input,
	  cdp_name_input into a single config produce_item_name_input which uses
	  bitmasks to determine what it affects. See battle/item.conf for details.
	* Updated arrow_decrement to have 3 possible values: Disabled, Enabled, and
	  Enabled + Autoguess (gives arrow consumption as appropiate to