@@ -1,5 +1,8 @@
 Date	Added
 
+2007/03/28
+	* Added config "vending_tax" to apply a tax to all vending requests, as it
+	  was in kRO Sakray some time ago (items.conf).
 2007/03/22
 	* Made packet_ver_flag's description use hexadecimal values for the packet
 	  versions, and changed the default to 0xFFFF. [Skotlex]
